--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,24 @@
 @import './fonts';
 
+// fontawseome
+@import './../node_modules/@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+
+// bootstrap
+@import './../node_modules/bootstrap/scss/bootstrap-reboot.scss';
+@import './../node_modules/bootstrap/scss/bootstrap-grid.scss';
+@import './../node_modules/bootstrap/scss/bootstrap-utilities.scss';
+// @import './../node_modules/bootstrap/scss/images';
+
+@import 'variables';
+@import './reset.scss';
+
+// site
+@import './shared/shared/index';
+
 body {
   font-family: 'Roboto', 'sans-serif';
+  color: $gray-primary;
 }
