--- a/styles/index.scss
+++ b/styles/index.scss
@@ -18,6 +18,9 @@
 // site
 @import './shared/shared/index';
 
+// homepage
+@import './homepage/index';
+
 body {
   font-family: 'Roboto', 'sans-serif';
   color: $gray-primary;
